test/interaction/Issue3503.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : _0 Sort _0 [ at Issue3503.agda:1.5-9 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: Check definition of A : ?0 stuck because Issue3503.agda:2.3-4: error: [CannotEliminateWithPattern] Cannot eliminate type ?0 with variable pattern a (did you supply too many arguments?) when checking the clause left hand side A a (blocked on _1)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-status-action "")
(agda2-info-action "*Constraints*" "Check definition of Issue3503.A : ?0 (blocked on _1)" nil)
