test/interaction/Issue3503.agda
A : {!!}
A a = Set

-- Display constraints (C-c C-=):
-- An internal error has occurred. Please report this as a bug.
-- Location of the error: src/full/Agda/Interaction/BasicOps.hs:457
